[CRD iOS] Remove mouse button state from mousemove event in drag gesture

Previously we keep sending the "left button down" info with the
mousemove event to the host during a drag gesture, which is interpreted
as mousedown on Windows.

This CL fixes this issue by removing the button state from the mouse
event when it is a mousemove event in a drag gesture.

Bug: 793481
Change-Id: Ifc2f9a4c0513df5f7f80223cae0c718b6f95ce1b
Reviewed-on: https://chromium-review.googlesource.com/818326
Reviewed-by: Jamie Walch <jamiewalch@chromium.org>
Commit-Queue: Yuwei Huang <yuweih@chromium.org>
Cr-Commit-Position: refs/heads/master@{#522938}
Former-commit-id: a2b5834286485964af1be2f95b9c3159a0fab34d